--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.10",
     "react-toastify": "^9.1.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
