--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-items-carousel": "^2.8.0",
     "react-loading": "^2.0.3",
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-redux": "^8.0.5",
